Rename the rest of the wall scrollers in the ZB config.

--- a/extras/conf/SRB2-22.cfg
+++ b/extras/conf/SRB2-22.cfg
@@ -2597,19 +2597,19 @@ linedeftypes
 
 		500
 		{
-			title = "Scroll Wall Front Side Left";
+			title = "Scroll Front Wall Left";
 			prefix = "(500)";
 		}
 
 		501
 		{
-			title = "Scroll Wall Front Side Right";
+			title = "Scroll Front Wall Right";
 			prefix = "(501)";
 		}
 
 		502
 		{
-			title = "Scroll Wall According to Linedef";
+			title = "Scroll Tagged Wall";
 			prefix = "(502)";
 			flags128text = "[7] Use texture offsets";
 			flags256text = "[8] Scroll back side";
@@ -2617,7 +2617,7 @@ linedeftypes
 
 		503
 		{
-			title = "Scroll Wall According to Linedef (Accelerative)";
+			title = "Scroll Tagged Wall (Accelerative)";
 			prefix = "(503)";
 			flags128text = "[7] Use texture offsets";
 			flags256text = "[8] Scroll back side";
@@ -2625,7 +2625,7 @@ linedeftypes
 
 		504
 		{
-			title = "Scroll Wall According to Linedef (Displacement)";
+			title = "Scroll Tagged Wall (Displacement)";
 			prefix = "(504)";
 			flags128text = "[7] Use texture offsets";
 			flags256text = "[8] Scroll back side";
