Adapt POF_SPLAT to UDMF setup

--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -1550,6 +1550,7 @@ udmf
 					8 = "Don't render planes";
 					16 = "Trigger linedef executor on touch";
 					32 = "Crush player";
+					64 = "Cut cyan flat pixels";
 				}
 			}
 			arg4
