Add FOF flag for splat flat rendering

--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -2186,6 +2186,7 @@ udmf
 					134217728 = "Ripple effect";
 					268435456 = "Don't copy light level";
 					536870912 = "Bouncy";
+					1073741824 = "Cut cyan flat pixels";
 				}
 			}
 		}
