Revamp alpha setup for water FOFs

--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -1795,16 +1795,21 @@ udmf
 			}
 			arg1
 			{
+				title = "Alpha";
+				default = 128;
+			}
+			arg2
+			{
 				title = "Flags";
 				type = 12;
 				enum
 				{
-				    1 = "Opaque";
-					2 = "Don't render sides";
-					4 = "Render separate light level";
-					8 = "Use target light level";
-					16 = "No ripple effect";
-					32 = "Goo physics";
+					1 = "Don't render sides";
+					2 = "Render separate light level";
+					4 = "Use target light level";
+					8 = "No ripple effect";
+					16 = "Goo physics";
+					32 = "Cut cyan flat pixels";
 				}
 			}
 		}
