--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -1874,21 +1874,26 @@ udmf
 			}
 			arg1
 			{
+				title = "Alpha";
+				default = 255;
+			}
+			arg2
+			{
 				title = "Tangibility";
 				type = 12;
 				enum = "tangibility";
 			}
-			arg2
+			arg3
 			{
 				title = "Flags";
 				type = 12;
 				enum
 				{
-					1 = "Translucent";
-					2 = "No shadow";
-					4 = "No respawn";
-					8 = "Air bobbing";
-					16 = "Float on water";
+					1 = "No shadow";
+					2 = "No respawn";
+					4 = "Air bobbing";
+					8 = "Float on water";
+					16 = "Cut cyan flat pixels";
 				}
 			}
 		}
