Revamp alpha setup for custom FOFs

--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -2164,6 +2164,11 @@ udmf
 			}
 			arg1
 			{
+				title = "Alpha";
+				default = 255;
+			}
+			arg2
+			{
 				title = "Flags";
 				type = 12;
 				enum
@@ -2180,7 +2185,6 @@ udmf
 					512 = "Split sprites";
 					1024 = "Render inside planes";
 					2048 = "Extra";
-					4096 = "Translucent";
 					8192 = "Fog";
 					16384 = "Only render inside planes";
 					32768 = "Render inside walls";
