Revamp alpha setup for laser FOFs

--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -2147,6 +2147,11 @@ udmf
 			}
 			arg1
 			{
+				title = "Alpha";
+				default = 128;
+			}
+			arg2
+			{
 				title = "Damage bosses?";
 				type = 11;
 				enum = "yesno";
