Handle splat flag for laser FOFs

--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -2152,9 +2152,13 @@ udmf
 			}
 			arg2
 			{
-				title = "Damage bosses?";
-				type = 11;
-				enum = "yesno";
+				title = "Flags";
+				type = 12;
+				enum
+				{
+					1 = "Don't damage bosses";
+					2 = "Cut cyan flat pixels";
+				}
 			}
 		}
 
