Revamp alpha setup for quicksand FOFs

--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -2122,15 +2122,24 @@ udmf
 			}
 			arg1
 			{
-				title = "Ripple effect?";
-				type = 11;
-				enum = "yesno";
+				title = "Alpha";
+				default = 255;
 			}
 			arg2
 			{
-				title = "Sinking speed";
+				title = "Ripple effect?";
+				type = 12;
+				enum
+				{
+					1 = "No ripple effect";
+					2 = "Cut cyan flat pixels";
+				}
 			}
 			arg3
+			{
+				title = "Sinking speed";
+			}
+			arg4
 			{
 				title = "Friction";
 			}
