Revamp alpha setup for bustable FOFs

--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -2077,6 +2077,11 @@ udmf
 			}
 			arg1
 			{
+				title = "Alpha";
+				default = 255;
+			}
+			arg2
+			{
 				title = "Bustable type";
 				type = 11;
 				enum
@@ -2087,12 +2092,6 @@ udmf
 					3 = "Strong";
 				}
 			}
-			arg2
-			{
-				title = "Translucent?";
-				type = 11;
-				enum = "noyes";
-			}
 			arg3
 			{
 				title = "Flags";
@@ -2102,6 +2101,7 @@ udmf
 					1 = "Bustable by pushables";
 					2 = "Trigger linedef executor";
 					4 = "Only bustable from below";
+					8 = "Cut cyan flat pixels";
 				}
 			}
 			arg4
