Revamp alpha setup for bobbing FOFs

--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -1825,9 +1825,20 @@ udmf
 			}
 			arg1
 			{
-				title = "Bobbing distance";
+				title = "Alpha";
+				default = 255;
 			}
 			arg2
+			{
+				title = "Cut cyan flat pixels?";
+				type = 11;
+				enum = "noyes";
+			}
+			arg3
+			{
+				title = "Bobbing distance";
+			}
+			arg4
 			{
 				title = "Flags";
 				type = 12;
@@ -1838,7 +1849,7 @@ udmf
 					4 = "Dynamic";
 				}
 			}
-			arg3
+			arg5
 			{
 				title = "Tangibility";
 				type = 12;
@@ -1856,6 +1867,17 @@ udmf
 				type = 13;
 			}
 			arg1
+			{
+				title = "Alpha";
+				default = 255;
+			}
+			arg2
+			{
+				title = "Cut cyan flat pixels?";
+				type = 11;
+				enum = "noyes";
+			}
+			arg3
 			{
 				title = "Tangibility";
 				type = 12;
