Revamp alpha setup for the remaining FOFs

--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -1757,30 +1757,28 @@ udmf
 			}
 			arg1
 			{
-				title = "Visibility";
+				title = "Alpha";
+				default = 255;
+			}
+			arg2
+			{
+				title = "Appearance";
 				type = 12;
 				enum
 				{
 					1 = "Don't render planes";
 					2 = "Don't render sides";
 					4 = "Render insides";
+					8 = "Render only insides";
+					16 = "No shadow";
+					32 = "Cut cyan flat pixels";
 				}
 			}
-			arg2
+			arg3
 			{
 				title = "Tangibility";
 				type = 12;
 				enum = "tangibility";
-			}
-			arg3
-			{
-				title = "Appearance";
-				type = 12;
-				enum
-				{
-					1 = "Translucent";
-					2 = "No shadow";
-				}
 			}
 		}
 
@@ -1931,30 +1929,28 @@ udmf
 			}
 			arg1
 			{
-				title = "Visibility";
+				title = "Alpha";
+				default = 255;
+			}
+			arg2
+			{
+				title = "Appearance";
 				type = 12;
 				enum
 				{
 					1 = "Don't render planes";
 					2 = "Don't render sides";
 					4 = "Render insides";
+					8 = "Render only insides";
+					16 = "No shadow";
+					32 = "Cut cyan flat pixels";
 				}
 			}
-			arg2
+			arg3
 			{
 				title = "Tangibility";
 				type = 12;
 				enum = "tangibility";
-			}
-			arg3
-			{
-				title = "Appearance";
-				type = 12;
-				enum
-				{
-					1 = "Translucent";
-					2 = "No shadow";
-				}
 			}
 			arg4
 			{
@@ -2011,14 +2007,8 @@ udmf
 			}
 			arg1
 			{
-				title = "Visibility";
-				type = 12;
-				enum
-				{
-					1 = "Don't render planes";
-					2 = "Don't render sides";
-					4 = "Don't render insides";
-				}
+				title = "Alpha";
+				default = 255;
 			}
 			arg2
 			{
@@ -2026,8 +2016,12 @@ udmf
 				type = 12;
 				enum
 				{
-					1 = "Translucent";
-					2 = "No shadow";
+					1 = "Don't render planes";
+					2 = "Don't render sides";
+					4 = "Don't render insides";
+					8 = "Render only insides";
+					16 = "No shadow";
+					32 = "Cut cyan flat pixels";
 				}
 			}
 		}
