Remove unnecessary options from quicksand FOF again

--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -2104,24 +2104,15 @@ udmf
 			}
 			arg1
 			{
-				title = "Alpha";
-				default = 255;
+				title = "Ripple effect?";
+				type = 11;
+				enum = "yesno";
 			}
 			arg2
 			{
-				title = "Ripple effect?";
-				type = 12;
-				enum
-				{
-					1 = "No ripple effect";
-					2 = "Cut cyan flat pixels";
-				}
-			}
-			arg3
-			{
 				title = "Sinking speed";
 			}
-			arg4
+			arg3
 			{
 				title = "Friction";
 			}
