Add a provisional GZDoom-esque 3D floor setup for the sake of immediate UDB usability.

--- a/extras/conf/udb/Includes/SRB222_linedefs.cfg
+++ b/extras/conf/udb/Includes/SRB222_linedefs.cfg
@@ -2195,6 +2195,51 @@ udmf
 				}
 			}
 		}
+		260
+		{
+			title = "Generalized 3D Floor";
+			id = "Sector_Set3dFloor";
+			requiresactivation = false;
+
+			arg0
+			{
+				title = "Sector Tag";
+				type = 13;
+			}
+			arg1
+			{
+				title = "Type";
+				type = 26;
+				default = 1;
+				enum
+				{
+					1 = "Solid";
+					2 = "Water";
+					3 = "Intangible";
+				}
+				flags
+				{
+					4 = "Render Both Sides";
+					16 = "Invert Sides";
+				}
+			}
+			arg2
+			{
+				title = "Flags";
+				type = 12;
+				enum
+				{
+					1 = "Disable shadowcast";
+					2 = "Double shadowcast";
+					4 = "Fog block";
+				}
+			}
+			arg3
+			{
+				title = "Opacity";
+				default = 255;
+			}
+		}
 	}
 
 	linedefexecmisc
