WIP: Remove support for DOS
WIP because I don't know if this wording is right for the error.

--- a/src/Makefile.cfg
+++ b/src/Makefile.cfg
@@ -308,7 +308,7 @@ ifndef MINGW
 ifndef MINGW64
 ifndef SDL
 ifndef DUMMY
-	DJGPPDOS=1
+$(error No interface or platform flag defined)
 endif
 endif
 endif
@@ -344,16 +344,6 @@ UPX_OPTS+=-q
 endif
 
 #Interface Setup
-ifdef DJGPPDOS
-	INTERFACE=djgppdos
-	NASMFORMAT=coff
-	OBJDIR:=$(OBJDIR)/djgppdos
-ifdef WATTCP
-	OBJDIR:=$(OBJDIR)/wattcp
-endif
-	WFLAGS+=-Wno-format
-	BIN:=$(BIN)/Dos
-else
 ifdef DUMMY
 	INTERFACE=dummy
 	OBJDIR:=$(OBJDIR)/dummy
@@ -405,7 +395,6 @@ ifdef MINGW
 	NASMFORMAT=win32
 	OBJDIR:=$(OBJDIR)/Mingw
 	BIN:=$(BIN)/Mingw
-endif
 endif
 endif
 endif
